--- a/semister5/index.html
+++ b/semister5/index.html
@@ -92,7 +92,7 @@
       </div> 
       <section>
         <que>1. What is Software?</que><br>
-        <ans>Software is a set of instructions, data, or programs used to operate computers and execute specific tasks. It is the opposite of hardware which describes the physical aspects of a computer. Software is a generic term used to refer to applications, scripts, and programs that run on a device.</ans><br>
+        <ans>Software is a set of instructions, data, or programs used to operate computers and execute specific tasks. It is the opposite of hardware which describes the physical aspects of a computer. Software is a generic term used to refer to applications, scripts, and programs that run on a device. <br>Software refers to a collection of data, programs, or instructions that tell a computer how to perform specific tasks or operations. It enables hardware to function and execute desired processes, and it can include applications, operating systems, and utilities. Software is intangible, and it is essential for any hardware to be operational.        </ans><br>
         
         <que>2. What are different types of software?</que><br>
         <ans>Software can be broadly categorized into two types: system software and application software. <br>System software includes operating systems, device drivers, and utility programs that manage and support a computer's basic functions. <br>Application software refers to programs that perform specific tasks for users, such as word processors, spreadsheets, and database management systems.</ans><br>
