--- a/dbms.html
+++ b/dbms.html
@@ -50,14 +50,14 @@
     }
 </style>
 <div id="body">
-    <center><br><br><br><br><br><br>
-        <br><br>
+    <center><br><br><br>
+    <font style="font-size: 1.5rem;">Wait till app is starting...</font>
         <div style="font-size: 1rem;" >
             <div class="spinner-border text-primary" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
         </div> <br>
-        
+        <img src="assets/images/kar_na.jpg" alt="kar_na">
     </center>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -99,7 +99,7 @@
                 document.write("An error occurred: " + error.message);
             }
         } else {
-           window.location = "login.html";
+         //  window.location = "login.html";
         }
     }
     
