--- a/dbms.html
+++ b/dbms.html
@@ -99,7 +99,7 @@
                 document.write("An error occurred: " + error.message);
             }
         } else {
-         //  window.location = "login.html";
+           window.location = "login.html";
         }
     }
     
