--- a/semister5/index.html
+++ b/semister5/index.html
@@ -22,10 +22,33 @@
 <link rel="icon" href="assets/images/logo.png" type="image/png">
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css?s=2" />
 <script src="../assets/js/script.js"></script>
+
+<script>
+  function memelogy() {
+    document.getElementById("meme_img").style.backgroundImage = 'url("https://arambhsoftech.com/Helpdesk/meme/meme.png")';
+}
+function removememe(){
+  document.getElementById("blur_back").style.display = "none";
+}
+</script>
 <style>
  
   </style>
-<body> 
+<body onload="memelogy();"> 
+ <center onclick="removememe();">
+ <div id="blur_back">
+  <section id="meme_box">
+    <div class="cut">
+      X
+    </div>
+    <div id="meme_img">
+
+    </div>
+  </section>
+ </div>
+
+
+ </center>
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center mt-2 p-2 mb-2 border-bottom">
    <div id="top_bar">
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -56,7 +79,7 @@
   <div class="semister">Semister-5</div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
- <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
+ <i class="fa fa-arrow-down" aria-hidden="true"></i></button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
           <!-- 1st Year -->
@@ -79,12 +102,10 @@
       </div>
     </div>
   </header>
-  
-  
+
     <div id="body">
       <div class="heading_name">Software technology</div>
       <div id="watermark">@Debuggers</div>
-
       <div id="up">
         <a href="#" id="goToTopButton" class="go-to-top-button">
           <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
