--- a/semister5/index.html
+++ b/semister5/index.html
@@ -117,10 +117,10 @@ function removememe() {
     <div id="meme_box" class="container position-fixed top-50 start-50 translate-middle rounded shadow-lg">
         <div class="row justify-content-center">
             <div class="col-12">
-                <img id="meme_img" src="your-image-url.jpg" class="img-fluid rounded" alt="Meme Image">
+                <img id="meme_img" class="img-fluid rounded" alt="Meme Image">
             </div>
             <div class="col-12 mt-3">
-                <button class="btn btn-danger" onclick="removememe()">Close Meme</button>
+                <button class="btn btn-danger" onclick="removememe()">Close</button>
             </div>
         </div>
     </div>
