--- a/semister5/comp_netw.html
+++ b/semister5/comp_netw.html
@@ -90,9 +90,139 @@
           <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
       </a>
       </div>  
-     
+      <h3>Basics of Data Communication</h3>
+    
+      <h4>1. Modulation and Encoding</h4>
+      <p><strong>Modulation</strong> refers to the process of varying a carrier signal in order to transmit data. This can be done by changing the amplitude, frequency, or phase of the carrier signal. Common types of modulation include Amplitude Modulation (AM), Frequency Modulation (FM), and Phase Modulation (PM).</p>
+      <p><strong>Encoding</strong> involves converting data into a specific format for transmission. This can include methods such as binary encoding, where data is represented as sequences of 0s and 1s, and various schemes like Manchester encoding or Differential Manchester encoding for digital data transmission.</p>
+  
+      <h4>2. Multiplexing and Switching</h4>
+      <p><strong>Multiplexing</strong> is a technique used to combine multiple signals into one medium to improve the efficiency of the communication channel. Types of multiplexing include Time-Division Multiplexing (TDM), Frequency-Division Multiplexing (FDM), and Wavelength-Division Multiplexing (WDM).</p>
+      <p><strong>Switching</strong> refers to the process of directing data packets from the source to the destination. Switching methods include Circuit Switching (used in traditional telephone networks), Packet Switching (used in data networks like the Internet), and Message Switching.</p>
+  
+      <h4>3. Communication Mediums</h4>
+      <p><strong>Communication mediums</strong> are the physical pathways through which data is transmitted. Common mediums include:</p>
+      <ul>
+          <li><strong>Wired Medium:</strong> Includes cables such as coaxial cables, twisted-pair cables, and fiber optic cables.</li>
+          <li><strong>Wireless Medium:</strong> Includes radio waves, microwaves, infrared, and satellite communications.</li>
+      </ul>
+  
+      <h4>4. Networks and Devices</h4>
+      <p><strong>Networks</strong> are collections of interconnected devices that can communicate with each other. Networks can be classified based on their size and purpose, such as Local Area Networks (LANs), Wide Area Networks (WANs), and Metropolitan Area Networks (MANs).</p>
+      <p><strong>Devices</strong> in a network include routers, switches, hubs, modems, and network interface cards (NICs). Each device plays a role in ensuring data is correctly routed and managed within the network.</p>
+  
+      <h4>5. Networking, Protocols, and Protocol Architecture</h4>
+      <p><strong>Networking</strong> involves the design and implementation of network systems to enable communication between devices. This includes setting up, managing, and securing networks.</p>
+      <p><strong>Protocols</strong> are rules and conventions for communication between network devices. Examples include Transmission Control Protocol (TCP), Internet Protocol (IP), and Hypertext Transfer Protocol (HTTP).</p>
+      <p><strong>Protocol Architecture</strong> refers to the structured framework of network protocols. It typically involves layers that work together to enable communication, such as the OSI and TCP/IP models.</p>
+  
+      <h4>6. Standards</h4>
+      <p><strong>Standards</strong> are established norms and specifications that ensure interoperability and compatibility between different systems and devices. Examples include IEEE 802.3 (Ethernet), IEEE 802.11 (Wi-Fi), and ISO/IEC 27001 (Information Security Management).</p>
+  
+      <h4>7. Data Transmission Concepts</h4>
+      <p><strong>Data Transmission</strong> involves sending data from one point to another. Key concepts include:</p>
+      <ul>
+          <li><strong>Bandwidth:</strong> The maximum rate at which data can be transmitted over a network.</li>
+          <li><strong>Latency:</strong> The delay between sending and receiving data.</li>
+          <li><strong>Throughput:</strong> The actual rate at which data is successfully transmitted over a network.</li>
+      </ul>
+  
+      <h4>8. Analog and Digital Transmission</h4>
+      <p><strong>Analog Transmission</strong> involves transmitting data using continuous signals that vary in amplitude, frequency, or phase. Analog signals can represent a wide range of values but are more susceptible to noise and degradation.</p>
+      <p><strong>Digital Transmission</strong> involves transmitting data as discrete signals, typically binary (0s and 1s). Digital signals are more resistant to noise and can be easily encrypted and compressed.</p>
+  
+      <h4>9. Transmission Impairments</h4>
+      <p><strong>Transmission Impairments</strong> refer to factors that degrade the quality of data transmission. Common impairments include:</p>
+      <ul>
+          <li><strong>Attenuation:</strong> Loss of signal strength over distance.</li>
+          <li><strong>Noise:</strong> Unwanted signals that interfere with data transmission.</li>
+          <li><strong>Distortion:</strong> Changes in the signal waveform during transmission.</li>
+          <li><strong>Interference:</strong> Disruption caused by external signals from other devices or channels.</li>
+      </ul>
+  
+      <h4>10. Layered Architecture of Computer Networks</h4>
+      <p><strong>Layered Architecture</strong> organizes network functions into layers, each with specific responsibilities. This modular approach simplifies network design and troubleshooting.</p>
+  
+      <h4>11. OSI and TCP/IP Architectures</h4>
+      <p><strong>OSI Model:</strong> The Open Systems Interconnection (OSI) model has seven layers:</p>
+      <ul>
+          <li><strong>Physical Layer</strong></li>
+          <li><strong>Data Link Layer</strong></li>
+          <li><strong>Network Layer</strong></li>
+          <li><strong>Transport Layer</strong></li>
+          <li><strong>Session Layer</strong></li>
+          <li><strong>Presentation Layer</strong></li>
+          <li><strong>Application Layer</strong></li>
+      </ul>
+      <p><strong>TCP/IP Model:</strong> The Transmission Control Protocol/Internet Protocol (TCP/IP) model has four layers:</p>
+      <ul>
+          <li><strong>Network Interface Layer</strong></li>
+          <li><strong>Internet Layer</strong></li>
+          <li><strong>Transport Layer</strong></li>
+          <li><strong>Application Layer</strong></li>
+      </ul>
+      <h3>Data Communication Concepts</h3>
 
-      <div>
-        <section>
+      <h4>1. Physical Layer</h4>
+      <p><strong>Guided Transmission Media:</strong> These are physical mediums through which data signals are transmitted. Examples include:</p>
+      <ul>
+          <li><strong>Twisted Pair Cables:</strong> Pairs of insulated copper wires twisted together. Used in Ethernet and telephone lines.</li>
+          <li><strong>Coaxial Cables:</strong> A central conductor surrounded by insulation and a shield. Commonly used in cable TV and broadband internet.</li>
+          <li><strong>Fiber Optic Cables:</strong> Use light to transmit data. They offer high bandwidth and are resistant to electromagnetic interference.</li>
+      </ul>
+      <p><strong>Wireless Transmission:</strong> Involves transmitting data through the air using electromagnetic waves. Examples include:</p>
+      <ul>
+          <li><strong>Radio Waves:</strong> Used in AM/FM radio and Wi-Fi.</li>
+          <li><strong>Microwaves:</strong> Used for satellite communications and point-to-point links.</li>
+          <li><strong>Infrared:</strong> Used for short-range communication, such as remote controls.</li>
+      </ul>
+  
+      <h4>2. Data Encoding</h4>
+      <p><strong>Digital and Analog Data and Signals:</strong></p>
+      <ul>
+          <li><strong>Digital Data:</strong> Discrete data values, typically binary (0s and 1s). Encoded using methods like NRZ (Non-Return-to-Zero) and Manchester encoding.</li>
+          <li><strong>Analog Data:</strong> Continuous data values. Encoded using methods like Amplitude Modulation (AM) and Frequency Modulation (FM).</li>
+      </ul>
+      <p><strong>Spread Spectrum:</strong> A technique used to spread the signal over a wide frequency band. This improves resistance to interference and increases security. Examples include:</p>
+      <ul>
+          <li><strong>Frequency Hopping Spread Spectrum (FHSS):</strong> Changes the frequency of the carrier signal periodically.</li>
+          <li><strong>Direct Sequence Spread Spectrum (DSSS):</strong> Spreads the signal by multiplying it with a high-rate pseudo-random noise sequence.</li>
+      </ul>
+  
+      <h4>3. Data Communication Interface</h4>
+      <p><strong>Asynchronous and Synchronous Transmission:</strong></p>
+      <ul>
+          <li><strong>Asynchronous Transmission:</strong> Data is sent one byte at a time with start and stop bits, allowing for variable timing between bytes. Common in serial communication.</li>
+          <li><strong>Synchronous Transmission:</strong> Data is sent in a continuous stream with synchronization between sender and receiver, reducing overhead. Used in high-speed communication.</li>
+      </ul>
+      <p><strong>Line Configuration and Interfacing:</strong> Refers to how devices are connected and how they communicate. Types include:</p>
+      <ul>
+          <li><strong>Point-to-Point:</strong> A direct connection between two devices.</li>
+          <li><strong>Point-to-Multipoint:</strong> A single device is connected to multiple devices.</li>
+      </ul>
+  
+      <h4>4. Data Link Control</h4>
+      <p><strong>Flow Control:</strong> Techniques used to manage the rate of data transmission between sender and receiver to prevent overflow. Methods include:</p>
+      <ul>
+          <li><strong>Stop-and-Wait:</strong> The sender waits for an acknowledgment before sending the next frame.</li>
+          <li><strong>Sliding Window:</strong> Allows multiple frames to be sent before needing an acknowledgment, improving efficiency.</li>
+      </ul>
+      <p><strong>Error Detection and Error Control:</strong> Methods used to identify and correct errors in transmitted data. Techniques include:</p>
+      <ul>
+          <li><strong>Parity Check:</strong> Adds a parity bit to detect errors in data.</li>
+          <li><strong>Checksums:</strong> Computes a value based on data content to check for errors.</li>
+          <li><strong>CRC (Cyclic Redundancy Check):</strong> Uses polynomial division to detect errors.</li>
+      </ul>
+      <p><strong>HDLC and Other Data Link Protocols:</strong> High-Level Data Link Control (HDLC) is a bit-oriented protocol used for communication over serial lines. Other protocols include:</p>
+      <ul>
+          <li><strong>PPP (Point-to-Point Protocol):</strong> Used for direct connections between two nodes.</li>
+          <li><strong>Frame Relay:</strong> A high-performance WAN protocol for data transmission.</li>
+      </ul>
+  
+      <h4>5. Multiplexing</h4>
+      <p><strong>Frequency-Division Multiplexing (FDM):</strong> Divides the available bandwidth of a communication medium into multiple frequency channels. Each channel carries a separate signal simultaneously.</p>
+      <p><strong>Synchronous Time-Division Multiplexing (TDM):</strong> Allocates fixed time slots to each signal in a round-robin fashion. Each channel transmits in its designated time slot.</p>
+      <p><strong>Statistical Time-Division Multiplexing:</strong> Dynamically allocates time slots based on the data traffic of each channel. This allows for more efficient use of bandwidth compared to synchronous TDM.</p>
+  
         </body>
 </html>
