--- a/semister5/cloud.html
+++ b/semister5/cloud.html
@@ -174,5 +174,66 @@
           <li><strong>Resource Management:</strong> Balancing resources among multiple tenants to avoid performance degradation.</li>
           <li><strong>Compliance:</strong> Adhering to regulatory requirements in a shared environment.</li>
       </ul>
+      <h3>Cloud Computing Systems and Issues</h3>
+
+      <h4>1. Study of Cloud Computing Systems</h4>
+      <p><strong>Cloud Computing Systems</strong> provide on-demand computing resources over the internet. Key platforms include:</p>
+      <ul>
+          <li><strong>Amazon EC2 (Elastic Compute Cloud):</strong> A scalable virtual server environment that allows users to run applications on a cloud infrastructure.</li>
+          <li><strong>Amazon S3 (Simple Storage Service):</strong> A scalable object storage service for storing and retrieving any amount of data at any time.</li>
+          <li><strong>Google App Engine:</strong> A platform-as-a-service (PaaS) offering for building and deploying applications on Google’s infrastructure.</li>
+          <li><strong>Microsoft Azure:</strong> A cloud computing platform that offers a range of services including virtual machines, storage, and application hosting.</li>
+      </ul>
+  
+      <h4>2. Build Private/Hybrid Cloud Using Open Source Tools</h4>
+      <p><strong>Private and Hybrid Clouds</strong> provide customizable and scalable cloud solutions. Open source tools for building these clouds include:</p>
+      <ul>
+          <li><strong>OpenStack:</strong> An open-source platform for creating and managing public and private clouds.</li>
+          <li><strong>CloudStack:</strong> An open-source cloud computing platform for creating and managing large-scale cloud environments.</li>
+          <li><strong>Proxmox VE:</strong> An open-source virtualization management platform for managing private cloud environments.</li>
+      </ul>
+  
+      <h4>3. Deployment of Web Services from Inside and Outside a Cloud Architecture</h4>
+      <p><strong>Web Services Deployment</strong> involves making applications available over the internet or an intranet. Key aspects include:</p>
+      <ul>
+          <li><strong>Inside Cloud:</strong> Deploying web services within a private or hybrid cloud to leverage internal resources and maintain control.</li>
+          <li><strong>Outside Cloud:</strong> Deploying web services on public cloud platforms to take advantage of scalability and global reach.</li>
+      </ul>
+  
+      <h4>4. MapReduce and Its Extensions to Cloud Computing</h4>
+      <p><strong>MapReduce</strong> is a programming model used for processing large datasets in a distributed manner. In cloud computing, it is used with frameworks such as:</p>
+      <ul>
+          <li><strong>Hadoop MapReduce:</strong> An implementation of MapReduce that operates within the Hadoop ecosystem.</li>
+          <li><strong>Google MapReduce:</strong> Part of Google’s cloud platform for large-scale data processing.</li>
+      </ul>
+      <p><strong>Extensions</strong> to MapReduce in cloud computing include:</p>
+      <ul>
+          <li><strong>YARN (Yet Another Resource Negotiator):</strong> A resource management layer for Hadoop that allows for more flexible and efficient use of resources.</li>
+          <li><strong>Apache Spark:</strong> An extension of MapReduce providing in-memory processing for faster data analysis.</li>
+      </ul>
+  
+      <h4>5. HDFS and GFS</h4>
+      <p><strong>HDFS (Hadoop Distributed File System)</strong> and <strong>GFS (Google File System)</strong> are distributed file systems designed for handling large volumes of data:</p>
+      <ul>
+          <li><strong>HDFS:</strong> Provides fault tolerance and scalability through data replication across a cluster of machines.</li>
+          <li><strong>GFS:</strong> Designed for storing large files and is optimized for high-throughput access.</li>
+      </ul>
+  
+      <h4>6. Interoperability and Service Monitoring</h4>
+      <p><strong>Interoperability</strong> refers to the ability of different systems and organizations to work together effectively. Issues and approaches include:</p>
+      <ul>
+          <li><strong>Issues with Interoperability:</strong> Compatibility problems between different cloud services and platforms.</li>
+          <li><strong>Vendor Lock-in:</strong> Dependence on a single cloud provider, which can make it difficult to switch providers or integrate with other systems.</li>
+          <li><strong>Interoperability Approaches:</strong> Using open standards, APIs, and cloud management tools to ensure compatibility between different systems.</li>
+      </ul>
+  
+      <h4>7. SLA Management, Metering Issues, and Report Generation</h4>
+      <p><strong>SLA (Service Level Agreement) Management</strong> involves ensuring that cloud services meet agreed-upon performance and availability standards. Key aspects include:</p>
+      <ul>
+          <li><strong>SLA Management:</strong> Monitoring service performance and ensuring compliance with SLA terms.</li>
+          <li><strong>Metering Issues:</strong> Tracking and managing resource usage to ensure accurate billing and efficient resource allocation.</li>
+          <li><strong>Report Generation:</strong> Creating reports on service performance, usage, and compliance with SLAs.</li>
+      </ul>
+  
         </body>
 </html>
